--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,78 @@ $font-family-base: "IBM Plex Mono" !important;
 $border-radius: 0rem;
 @import "node_modules/bootstrap/scss/bootstrap";
 @import "node_modules/bootstrap-vue/src/index.scss";
+
+
+
+.navbar a {
+  color: rgba(0, 0, 0, 0.9);
+}
+
+.navbar a:hover {
+  color: #0056b3;
+  text-decoration: none;
+}
+
+.b-button-submit {
+  padding: 0.375rem 2rem;
+}
+
+.btn-primary {
+  color: #000000;
+}
+
+.b-button {
+  padding: 0.375rem 2rem;
+}
+
+/* Responsive */
+$breakpoint-xs: 0;
+$breakpoint-sm: 576px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 992px;
+$breakpoint-xl: 1200px;
+
+@media (min-width: $breakpoint-xs) {
+
+  /* date result tex */
+  .date-result {
+    font-size: 1rem;
+  }
+
+
+  .hero-form-container {
+    top: 30%;
+  }
+}
+
+@media (min-width: $breakpoint-sm) {
+  .hero-form-container {
+    top: 30%;
+  }
+}
+
+@media (min-width: $breakpoint-md) {
+
+  /* date result tex */
+  .date-result {
+    font-size: 0.9rem;
+  }
+
+  /* form container top position */
+  .hero-form-container {
+    top: 28%;
+  }
+}
+
+@media (min-width: $breakpoint-lg) {
+
+  /* date result tex */
+  .date-result {
+    font-size: 1rem;
+  }
+
+
+  .hero-form-container {
+    top: 35%;
+  }
+}
